syntax = "proto3";

package chat;

service ChatAgentService {
  rpc Chat (PlayerChatRequest) returns (stream PlayerChatResponse);
}

message PlayerChatRequest {
  string player_id = 1;
  string player_nickname = 2;
  string niki_id = 3;
  string niki_name = 4;
  string input_text = 5;
}

message PlayerChatResponse {
  string generated_text = 1;
}
